deploy-version-a-b/ingress-bluegreen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-color-active
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    ## Persistindo conexão com Affinity Cookie do NGINX Ingress Controller, a sessão do usuário sempre será direcionada para a mesma versão (blue ou green) da aplicação.
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  ingressClassName: nginx
  rules:
  - host: app.bernardolankheet.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-color-active
            port:
              number: 80
